objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SBQQ__PricingMethodEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether Pricing Method may be changed when this product is added to quote.</description>
        <inlineHelpText>Select if Pricing Method can be changed when this product is added to quote.</inlineHelpText>
        <label>Pricing Method Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Pricing method that should be applied to this product.</description>
        <inlineHelpText>Pricing method that should be applied to this product.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductPictureID__c</fullName>
        <description>ID of Document or Content record that holds the picture for this product.</description>
        <inlineHelpText>ID of Document or Content record that holds the picture for this product.</inlineHelpText>
        <label>Product Picture Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that determines whether the quantity is editable.</description>
        <inlineHelpText>Allow or prevent changing the quantity for this product.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Quantity Scale</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__ReconfigurationDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that disables re-configuration of this product.</description>
        <inlineHelpText>When checked this product can only be configured when first added to a quote. If selected, users will not have access to a Configure link on the Edit Lines page after product has been added.</inlineHelpText>
        <label>Disable Reconfiguration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product that replaces this product on renewal.</description>
        <inlineHelpText>Product that replaces this product on renewal. Use this to quote a different SKU when renewing.</inlineHelpText>
        <label>Renewal Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Original Products</relationshipLabel>
        <relationshipName>OriginalProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SortOrder__c</fullName>
        <description>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</description>
        <inlineHelpText>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Specifications__c</fullName>
        <description>Formatted specifications for this product for use in quote templates to produce spec sheets.</description>
        <inlineHelpText>Formatted specifications for this product for use in quote templates to produce spec sheets.</inlineHelpText>
        <label>Specifications</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List or Net product price.</description>
        <inlineHelpText>Determines whether Percent of Total is calculated off List or Net product prices.</inlineHelpText>
        <label>Percent Of Total Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Subscription category for this product. Applies to all products and used to limit percent of total subscriptions to certain products.</description>
        <inlineHelpText>Use this to limit percent of total calculations to certain product categories. For example, software maintenance should only calculate percentage on products with a software maintenance percent of total category.</inlineHelpText>
        <label>Percent Of Total Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                    <label>Device</label>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>OnPremise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription total to be used as the price of this subscription.</inlineHelpText>
        <label>Percent Of Total (%)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effective product on which maintenance should calculate.</description>
        <inlineHelpText>Use this field to override a product that is included in a percent of total calculation. Point this lookup to a product with a list price you would like to use for the current product’s Percent of Total calculations.</inlineHelpText>
        <label>Percent Of Total Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Targeting Products</relationshipLabel>
        <relationshipName>SubscriptionTargetingProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term length of this subscription. Only applicable if the product is a subscription.</description>
        <inlineHelpText>Term length of this subscription. Only applicable if the product is a subscription.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</description>
        <inlineHelpText>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewable</fullName>
                    <default>true</default>
                    <label>Renewable</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Renewable/Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountLevel__c</fullName>
        <description>Level of subscription term that&apos;s used to calculated term discount.</description>
        <inlineHelpText>Specify subscription term level that should be used in calculating term discount. Leave blank to indicate default.</inlineHelpText>
        <label>Term Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Term Discounted Products</relationshipLabel>
        <relationshipName>TermDiscountedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit product quoted when upgrading this product.</description>
        <inlineHelpText>Use to specify credit when quoting upgrades to this product.</inlineHelpText>
        <label>Upgrade Credit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Credited Products</relationshipLabel>
        <relationshipName>CreditedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeRatio__c</fullName>
        <description>The conversion rate between this upgrade product and its source product.</description>
        <inlineHelpText>The conversion rate between this product&apos;s quantity and that of its source product.</inlineHelpText>
        <label>Upgrade Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the product being upgraded.</description>
        <inlineHelpText>Product being upgraded. Populating this field makes this product an upgrade.</inlineHelpText>
        <label>Upgrade Source</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Upgrades</relationshipLabel>
        <relationshipName>TargetUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded to.</description>
        <inlineHelpText>Specify the upgraded product. Only applicable if this product is an upgrade as indicated by Upgrade Source field being populated or having related Upgrade Source records.</inlineHelpText>
        <label>Upgrade Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Source Upgrades</relationshipLabel>
        <relationshipName>SourceUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSP_High_Value__c</fullName>
        <formula>Standalone_Selling_Price__r.SSP_High_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP High Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSP_Low_Value__c</fullName>
        <formula>Standalone_Selling_Price__r.SSP_Low_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP Low Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Server_Type__c</fullName>
        <label>Server Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End to End Solution</fullName>
                </value>
                <value>
                    <fullName>Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Consolidate IT assets</fullName>
                </value>
                <value>
                    <fullName>Software Suites</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete Data Solution</fullName>
                </value>
                <value>
                    <fullName>IT Operations</fullName>
                </value>
                <value>
                    <fullName>Risk Mitigation</fullName>
                </value>
                <value>
                    <fullName>Software Suites</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standalone_Selling_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Standalone Selling Price</label>
        <referenceTo>Stand_Alone_Selling_Price__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Pricebook_Price__c</fullName>
        <label>Standard Pricebook Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>U_s_Occupied__c</fullName>
        <label>U&apos;s Occupied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volume_Day__c</fullName>
        <label>Volume / Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 GB / Day</fullName>
                </value>
                <value>
                    <fullName>2 GB / Day</fullName>
                </value>
                <value>
                    <fullName>5 GB / Day</fullName>
                </value>
                <value>
                    <fullName>10 GB / Day</fullName>
                </value>
                <value>
                    <fullName>15 GB / Day</fullName>
                </value>
                <value>
                    <fullName>20 GB / Day</fullName>
                </value>
                <value>
                    <fullName>50 GB / Day</fullName>
                </value>
                <value>
                    <fullName>100 GB / Day</fullName>
                </value>
                <value>
                    <fullName>250 GB / Day</fullName>
                </value>
                <value>
                    <fullName>500 GB / Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__BillingRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__RevenueRecognitionRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>RevenueRecognitionRuleProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>TaxRulesProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__ChargeType__c</columns>
        <columns>SBQQ__BillingFrequency__c</columns>
        <columns>SBQQ__BillingType__c</columns>
        <columns>blng__BillingRule__c</columns>
        <columns>blng__TaxRule__c</columns>
        <columns>blng__RevenueRecognitionRule__c</columns>
        <columns>Product_Picture__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>All_Admin</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__ChargeType__c</columns>
        <columns>SBQQ__BillingFrequency__c</columns>
        <columns>SBQQ__BillingType__c</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>SBQQ__HasConsumptionSchedule__c</columns>
        <columns>SBQQ__DiscountSchedule__c</columns>
        <columns>Standard_Pricebook_Price__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Services</value>
        </filters>
        <label>All Admin</label>
    </listViews>
    <listViews>
        <fullName>Billing_Fields</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__ChargeType__c</columns>
        <columns>SBQQ__BillingType__c</columns>
        <columns>SBQQ__BillingFrequency__c</columns>
        <columns>blng__BillingRule__c</columns>
        <columns>blng__RevenueRecognitionRule__c</columns>
        <columns>blng__TaxRule__c</columns>
        <columns>SBQQ__TaxCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Billing Fields</label>
    </listViews>
    <listViews>
        <fullName>Bundles</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__ConfigurationEvent__c</columns>
        <columns>SBQQ__ConfigurationFields__c</columns>
        <columns>SBQQ__ConfigurationFieldSet__c</columns>
        <columns>SBQQ__ConfigurationFormTitle__c</columns>
        <columns>SBQQ__ConfigurationType__c</columns>
        <columns>SBQQ__ConfigurationValidator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SBQQ__ConfigurationType__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>SBQQ__ConfigurationType__c</field>
            <operation>notEqual</operation>
            <value>Disabled</value>
        </filters>
        <label>Bundles</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Community_Featured_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Community_Product_Image_URL__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Community Featured Products</label>
    </listViews>
    <listViews>
        <fullName>MCB_View</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__ChargeType__c</columns>
        <columns>SBQQ__BillingFrequency__c</columns>
        <columns>SBQQ__BillingType__c</columns>
        <columns>SBQQ__SubscriptionTerm__c</columns>
        <columns>Standard_Pricebook_Price__c</columns>
        <columns>blng__BillingRule__c</columns>
        <columns>blng__TaxRule__c</columns>
        <columns>blng__RevenueRecognitionRule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Software,Services,Hardware</value>
        </filters>
        <label>MCB View</label>
    </listViews>
    <listViews>
        <fullName>Percent_of_Total</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>SBQQ__SubscriptionPercent__c</columns>
        <columns>SBQQ__SubscriptionBase__c</columns>
        <columns>SBQQ__SubscriptionCategory__c</columns>
        <columns>SBQQ__DynamicPricingConstraint__c</columns>
        <columns>SBQQ__SubscriptionTarget__c</columns>
        <columns>SBQQ__ExcludeFromMaintenance__c</columns>
        <columns>SBQQ__IncludeInMaintenance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Percent of Total</label>
    </listViews>
    <listViews>
        <fullName>Pricing_Detail</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>SBQQ__PricingMethod__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__NonDiscountable__c</columns>
        <columns>SBQQ__PriceEditable__c</columns>
        <columns>SBQQ__PricingMethodEditable__c</columns>
        <columns>SBQQ__CostEditable__c</columns>
        <columns>SBQQ__DiscountSchedule__c</columns>
        <columns>SBQQ__CostSchedule__c</columns>
        <columns>SBQQ__PricingGuidance__c</columns>
        <filterScope>Everything</filterScope>
        <label>Pricing Detail</label>
    </listViews>
    <listViews>
        <fullName>Storefront_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.SKU</columns>
        <columns>PRODUCT2.PRODUCT_CLASS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.SKU</field>
            <operation>notEqual</operation>
        </filters>
        <label>Storefront Products</label>
    </listViews>
    <listViews>
        <fullName>Subscriptions</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>SBQQ__SubscriptionPricing__c</columns>
        <columns>SBQQ__SubscriptionTerm__c</columns>
        <columns>SBQQ__SubscriptionType__c</columns>
        <filterScope>Everything</filterScope>
        <label>Subscription Fields</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>